Adjust PK sequence generators to account for initial data vals

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,11 +1,11 @@
 ---
 applications:
-- name: spring-petclinic
+- name: djc-spring-petclinic
   memory: 768M
   random-route: true
-  buildpack: liberty-for-java
+  buildpacks:
+    - liberty-for-java
   path: ./target/spring-petclinic-cf-2.1.0.jar
   env:
-    JBP_CONFIG_SPRING_AUTO_RECONFIGURATION: '{enabled: false}'
     SPRING_PROFILES_ACTIVE: postgresql
-    JAVA_OPTS: '-Dspring.datasource.initialization-mode=always'
+    JAVA_OPTS: '-Dspring.datasource.initialization-mode=never'
