--- a/src/main/resources/application-postgresql.properties
+++ b/src/main/resources/application-postgresql.properties
@@ -5,4 +5,4 @@ dbport=${vcap.services.petclinic-db.credentials.connection.postgres.hosts[0].por
 dbname=${vcap.services.petclinic-db.credentials.connection.postgres.database}
 spring.datasource.url=jdbc:postgresql://${dbhost}:${dbport}/${dbname}
 spring.datasource.username=${vcap.services.petclinic-db.credentials.connection.postgres.authentication.username}
-spring.datasource.password=${vcap.services.petclinic-db.credentials.connection.postgres.authentication..password}
+spring.datasource.password=${vcap.services.petclinic-db.credentials.connection.postgres.authentication.password}
