Added validation for PostgreSQL properties. Removed RG from  ibmcloud login command in pipeline

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+       <groupId>org.slf4j</groupId>
+       <artifactId>slf4j-api</artifactId>
+       <version>1.7.26</version>
+    </dependency>
 
 
     <!-- Databases - Uses HSQL by default -->
