--- a/src/main/resources/application-postgresql.properties
+++ b/src/main/resources/application-postgresql.properties
@@ -1,8 +1,11 @@
 # database init, supports postgresql
 database=postgresql
-dbhost=${vcap.services.petclinic-db.credentials.connection.postgres.hosts[0].hostname}
-dbport=${vcap.services.petclinic-db.credentials.connection.postgres.hosts[0].port}
-dbname=${vcap.services.petclinic-db.credentials.connection.postgres.database}
-spring.datasource.url=jdbc:postgresql://${dbhost}:${dbport}/${dbname}
-spring.datasource.username=${vcap.services.petclinic-db.credentials.connection.postgres.authentication.username}
-spring.datasource.password=${vcap.services.petclinic-db.credentials.connection.postgres.authentication.password}
+extdb.dbHost=${vcap.services.petclinic-db.credentials.connection.postgres.hosts[0].hostname}
+extdb.dbPort=${vcap.services.petclinic-db.credentials.connection.postgres.hosts[0].port}
+extdb.dbName=${vcap.services.petclinic-db.credentials.connection.postgres.database}
+extdb.dbUser=${vcap.services.petclinic-db.credentials.connection.postgres.authentication.username}
+extdb.dbPassword=${vcap.services.petclinic-dbx.credentials.connection.postgres.authentication.password}
+spring.datasource.username=${extdb.dbUser}
+spring.datasource.password=${extdb.dbPassword}
+spring.datasource.url=jdbc:postgresql://${extdb.dbHost}:${extdb.dbPort}/${extdb.dbName}
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
