--- a/src/main/resources/application-postgresql.properties
+++ b/src/main/resources/application-postgresql.properties
@@ -4,7 +4,7 @@ extdb.dbHost=${vcap.services.petclinic-db.credentials.connection.postgres.hosts[
 extdb.dbPort=${vcap.services.petclinic-db.credentials.connection.postgres.hosts[0].port}
 extdb.dbName=${vcap.services.petclinic-db.credentials.connection.postgres.database}
 extdb.dbUser=${vcap.services.petclinic-db.credentials.connection.postgres.authentication.username}
-extdb.dbPassword=${vcap.services.petclinic-dbx.credentials.connection.postgres.authentication.password}
+extdb.dbPassword=${vcap.services.petclinic-db.credentials.connection.postgres.authentication.password}
 spring.datasource.username=${extdb.dbUser}
 spring.datasource.password=${extdb.dbPassword}
 spring.datasource.url=jdbc:postgresql://${extdb.dbHost}:${extdb.dbPort}/${extdb.dbName}
